--- a/docs-web/pom.xml
+++ b/docs-web/pom.xml
@@ -189,9 +189,13 @@
                   <name>application.mode</name>
                   <value>dev</value>
                 </systemProperty>
+                <systemProperty>
+                  <name>docs.home</name>
+                  <value>../data/docs</value>
+                </systemProperty>
               </systemProperties>
               <webApp>
-                <contextPath>/docs-web</contextPath>
+                <contextPath>/</contextPath>
                 <overrideDescriptor>src/dev/main/webapp/web-override.xml</overrideDescriptor>
               </webApp>
             </configuration>
